Pushing all data

--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,5 @@ FRONTEND_URL = "http://localhost:5173"
 NODE_STATE = "production"
 
 GEMINI_API_KEY = "AIzaSyBxNgId9VUmlN9v4QGCdU67eYO6l6UR_OA"
+
+FRONTEND_URL = "http://localhost:5173"
