--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -8,6 +9,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "jimp": "^1.6.0",
+    "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
     "mongoose": "^8.10.0",
     "mongoose-sequence": "^6.0.1",
