--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
-    "axios": "^1.7.9",
+    "@google-cloud/speech": "^6.7.0",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.2",
     "fs": "^0.0.1-security",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
@@ -18,6 +21,7 @@
     "path": "^0.12.7",
     "qrcode-reader": "^1.0.4",
     "sharp": "^0.33.5",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "whisper-node": "^1.1.1"
   }
 }
