--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-webcam": "^7.2.0",
